# AI-Quant-Trading

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/trading_platform/: logging_config.py
src/trading_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/trading_platform/backtest/: __init__.py  costs.py  engine.py  sizing.py
src/trading_platform/config/: __init__.py  settings.py
src/trading_platform/data/: __init__.py  bist_membership.py  bist_universe.py  evds.py  indicators.py  macro.py  pipeline.py  scan.py  validation.py
src/trading_platform/data/providers/: __init__.py  base.py  eodhd_bist.py  yfinance_us.py
src/trading_platform/metrics/: __init__.py  performance.py
src/trading_platform/models/: dataset.py  inference.py  lstm_classifier.py  train.py  walk_forward.py
src/trading_platform/strategies/: __init__.py  signals.py
src/trading_platform/ui/: app.py
tests/: test_backtest_smoke.py  test_bist_membership.py  test_indicators.py  test_macro_merge.py  test_metrics.py
