[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-trading"
version = "0.1.0"
description = "AI-Quant-Trading: LSTM signals, VectorBT backtest, Streamlit UI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.0",
    "requests>=2.28",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "vectorbt>=0.26",
    "streamlit>=1.28",
    "plotly>=5.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
